add LayoutCategory for adding category

--- a/templates/pages/post/index_public.html.twig
+++ b/templates/pages/post/index_public.html.twig
@@ -1,71 +1,4 @@
-{% extends 'base.html.twig' %}
-
-{% block title %} HoussArtGallery- Nos Articles{% endblock %}
-
-{% block body %}
-
-<style>
-.empty{
-    height: 6rem;
-}
-.heading{
-    font-family: 'roboto';
-}
-.info{
-    background: lightyellow;
-    
-}
-.card{
-    box-shadow: 0 0 1rem #000;
-}
-</style>
-<body>
-
-	{% block login %}
-		{% include "partials/_login.html.twig" %}
-	{% endblock %}
-    
-<div class="container-fluid banner py-5">
-    <div class="container">
-        <div class="col-12 d-flex justify-content-center align-item-center empty my-4">
-        </div> 
-        <div class="col-12 d-flex justify-content-center align-items-center mt-5">
-             <h1 class="heading fs-1 fw-bold mt-5">NOS ARTICLES</h1>
-        </div>
-
-        <div class="col-12 pt-5 text-warning">
-            <h2 class="text-secondary fs-4">Il y'a {{ posts.getTotalItemCount}} articles au total.</h2>
-        </div>
-        <div class="d-flex justify-content-start align-items-center my-4">
-            <a href="{{ path('post.new') }}" class="btn btn-warning fs-4">Ajouter Un Article</a>
-        </div>
-
-        <div class="container">
-            <div class="row d-flex justify-content-between align-items-center">
-            {% for post in posts %}
-                <div class="col-sm-12 col-md-6 col-lg-4 my-3">
-                    <div class="card h-100">
-                        <a href="{{ path('post.show', { slug:post.slug }) }}">
-                            <img src="{{ vich_uploader_asset(post, 'imageFile') }}" class="card-img-top w-100" alt="...">
-                        </a>
-                        <div class="card-body">
-                            <h1 class="card-text fs-2"><small class="text-warning">Publié Le {{ post.createdAt|date('d/m/Y') }}</small></h1>
-                            <h5 class="card-title fs-3 fw-bold ">{{ post.title|capitalize }}</h5>
-                            <p class="card-text fs-4">{{ post.content|slice(1, 200) ~ '...' }}</p>
-                            <p class="card-text fs-2"><small class="text-info ">Dérnière Mise à jour {{ post.updatedAt|date('d/m/Y') }}</small></p>
-                        </div>
-                    </div>
-                </div>
-            {% endfor %}
-            </div>
-        </div>
-
-            <div class="pagination pagination-lg col-12 d-flex justify-content-center align-items-center fs-3 mb-4 py-5">
-                {{ knp_pagination_render(posts) }}
-            </div>
-        </div>
-    </div>
-</div>
-</body>
-
-{% endblock %}
+{% include "layouts/_blog.html.twig" with {
+    title: " HoussArtGallery- Nos Articles",
+     posts: posts 
+} %}
