--- a/templates/layouts/_blog.html.twig
+++ b/templates/layouts/_blog.html.twig
@@ -45,7 +45,7 @@
         <div class="container">
             <div class="row d-flex justify-content-between align-items-center">
             {% for post in posts %}
-               {% include "components/_card.html.twig"%}
+               {% include "components/_card.html.twig" with {post:post} only %}
             {% endfor %}
             </div>
         </div>
