--- a/templates/pages/home/index.html.twig
+++ b/templates/pages/home/index.html.twig
@@ -154,7 +154,7 @@
 	                    </div>
 	                    <div class="carousel-inner">
 	                    <div class="carousel-item active">
-	                        <img src="{{ vich_uploader_asset(products, 'imageFile') }}" class="d-block w-100 p-3" alt="...">
+	                        <img src="{{ vich_uploader_asset(products, 'imageFile') }}" class="d-block w-100 p-3" alt="..." >
 	                    </div>
 	                    <div class="carousel-item">
 	                        <img src="{{ vich_uploader_asset(products, 'imageFile') }}" class="d-block w-100 p-3" alt="...">
@@ -269,6 +269,36 @@
 </div>
 </div>
 <!-- review Section End -->
+
+<!-- posts Section Start -->
+<div class="container-fluid banner2 py-5">
+<div class="container my-5 d-flex justif-content-center align-items-center">
+	<div class="row row-cols-1 row-cols-md-3 flex-wrap g-4">
+		<div class="col-12">
+			<h1 class="heading mb-5 text-center">NOS ARTICLES
+			</h1>
+		</div>
+		{% for post in posts %}
+			<div class="col-12 col-md-6 col-lg-3 text-secondary py-3">
+				<div class="text-center ">
+					<img src="{{ vich_uploader_asset(post, 'imageFile') }}" width="250px" height="200px">
+					<div class="content">
+						<h2 class="fs-1">{{ post.title }}</h2>
+						<h4 class="fs-2">{{ post.slug }}</h4>
+						<p class="fs-5">{{ post.content|slice(0,100) ~ '...'}}</p>
+					</div>
+				</div>
+			</div>
+		{% endfor %}
+		
+		<div class="col-12 d-flex justify-content-center align-items-center text-center my-5">
+				<a href="{{ path('post.index.public')}}">VOIR TOUS LES ARTICLES</a>
+				<a href="{{ path('post.new') }}"> LAISSEZ VOTRE ARTICLES</a>
+		</div>
+	</div>
+</div>
+</div>
+<!-- posts Section End -->
 
 </body>
 {% endblock %}
