--- a/templates/pages/home/index.html.twig
+++ b/templates/pages/home/index.html.twig
@@ -100,204 +100,23 @@
 <!-- HomeSection End -->
 
 <!-- Icons Container Start-->
-<div class="container bg mt-5">
-	<section class=" row iconsContainer">
-		<div class="icons">
-			<i class="fa-solid fa-code-branch"></i>
-			<div class="content">
-				<h3>100+</h3>
-				<p>Branches</p>
-			</div>
-		</div>
-
-		<div class="icons">
-			<i class="fa-solid fa-palette"></i>
-			<div class="content">
-				<h3>5800+</h3>
-				<p>tableaux Vendus</p>
-			</div>
-		</div>
-
-		<div class="icons">
-			<i class="fa-solid fa-face-smile-wink"></i>
-			<div class="content">
-				<h3>2560+</h3>
-				<p>Clients Satisfaits</p>
-			</div>
-		</div>
-
-		<div class="icons">
-			<i class="fa-solid fa-hand-holding-heart"></i>
-			<div class="content">
-				<h3>100+</h3>
-				<p>Nouveautés</p>
-			</div>
-		</div>
-	</section>
-</div>
+{% include "components/_icons.html.twig" %}
 <!-- Icons Container End -->
 
 <!--  ProductsHome Start -->
-<div class="container-fluid banner1 py-5">
-	<div class="container">
-		<div class="row d-flex-row justify-content-center align-items-center py-5 my-5">
-			<h1 class="heading py-5 text-white">NOTRE GALERIE</h1>
-			{% for products in products %}
-			<div class="col-10 col-sm-10 col-md-6 col-lg-3 my-4">
-	        	<div class="card h-100 box-ch rounded-0 border-transparent bg-white my-5">
-	            	<h2 class="p-4 text-center artist fs-4">{{ products.name}}</h2>
-	                    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
-	                    <div class="carousel-indicators">
-	                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-	                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-	                    </div>
-	                    <div class="carousel-inner">
-	                    <div class="carousel-item active">
-	                        <img src="{{ vich_uploader_asset(products, 'imageFile') }}" class="d-block w-100 p-3" alt="..." >
-	                    </div>
-	                    <div class="carousel-item">
-	                        <img src="{{ vich_uploader_asset(products, 'imageFile') }}" class="d-block w-100 p-3" alt="...">
-	                    </div>
-	                    <div class="carousel-item">
-	                        <img src="{{ vich_uploader_asset(products, 'imageFile') }}" class="d-block w-100 p-3" alt="...">
-	                    </div>
-	                    </div>
-	                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-	                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-	                    <span class="visually-hidden">Previous</span>
-	                    </button>
-	                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-	                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-	                    <span class="visually-hidden">Next</span>
-	                    </button>
-	                    </div>
-	            </div>
-	        </div>
-			{% endfor %}
-			<p class="fs-2 text-center text-white my-5">Découvrez l'univers envoûtant de l'houssArtGallery, où l'art prend vie dans une symphonie de couleurs et d'émotions. Notre nouvelle exposition vous invite à plonger au cœur d'une collection unique, où chaque œuvre raconte une histoire, éveille une émotion, ouvre une fenêtre sur un monde d'inspiration sans limite. De la peinture figurative aux sculptures modernes, nos collections célèbrent la diversité et la richesse de l'expression artistique. Laissez-vous transporter par la beauté et la créativité, et venez vivre une expérience inoubliable au sein de l'houssArtGallery. Rejoignez-nous pour un voyage au-delà du visible, où l'art révèle les nuances les plus subtiles de l'âme humaine.</p>
-			<div class="col-12 d-flex justify-content-center align-items-center text-center my-5">
-				<a href="{{ path('products.index.public')}}">VOIR TOUS NOS TABLEAUX</a>
-				<a href="{{ path('security.registration')}}">S'INSCRIRE</a>
-			</div>
-	    </div>
-	</div>
-</div>
+{% include "components/_productsHome.html.twig" %}
 <!--  ProductsHome End -->
 
 <!--  CollectionsHome Start -->
-<div class="container-fluid banner2 py-5">
-	<div class="container">
-		<div class="row d-flex-row justify-content-center align-items-center py-5 my-5">
-			<h1 class="heading py-5">NOS COLLECTIONS</h1>
-			{% for colletion in colletion %}
-			<div class="col-10 col-sm-10 col-md-6 col-lg-3 my-4">
-	        	<div class="card h-100 box-ch rounded-0 border-transparent bg-white my-5">
-	            	<h2 class="p-4 text-center artist fs-4">{{ colletion.name}}</h2>
-	                    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
-	                    <div class="carousel-indicators">
-	                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-	                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-	                    </div>
-	                    <div class="carousel-inner">
-	                    <div class="carousel-item active">
-	                        <img src="{{ vich_uploader_asset(colletion, 'imageFile') }}" class="d-block w-100 p-3" alt="...">
-	                    </div>
-	                    <div class="carousel-item">
-	                        <img src="{{ vich_uploader_asset(colletion, 'imageFile') }}" class="d-block w-100 p-3" alt="...">
-	                    </div>
-	                    <div class="carousel-item">
-	                        <img src="{{ vich_uploader_asset(colletion, 'imageFile') }}" class="d-block w-100 p-3" alt="...">
-	                    </div>
-	                    </div>
-	                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-	                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-	                    <span class="visually-hidden">Previous</span>
-	                    </button>
-	                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-	                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-	                    <span class="visually-hidden">Next</span>
-	                    </button>
-	                    </div>
-	            </div>
-	        </div>
-			{% endfor %}
-			<p class="fs-2 text-center my-5">Au sein de l'houssArtGallery, chaque collection est une ode à l'exploration artistique, un carrefour où se rencontrent passé, présent et futur. Nos soigneusement sélectionnées incarnent l'avant-garde de la créativité, allant des chefs-d'œuvre classiques réinterprétés aux expressions contemporaines les plus audacieuses. Chaque pièce est choisie pour sa capacité à dialoguer avec les sens, éveillant curiosité et admiration. Nous invitons les passionnés d'art et les collectionneurs à découvrir des trésors cachés, des œuvres qui défient le temps et racontent des histoires universelles. L'houssArtGallery est plus qu'une galerie, c'est un sanctuaire où l'art est célébré comme le reflet le plus pur de l'humanité.</p>
-			<div class="col-12 d-flex justify-content-center align-items-center text-center my-5">
-				<a href="{{ path('collection.index.public')}}">VOIR TOUS NOS COLLECTIONS</a>
-				<a href="{{ path('security.registration')}}">S'INSCRIRE</a>
-			</div>
-	    </div>
-	</div>
-</div>
+{% include "components/_collectionsHome.html.twig" %}
 <!--  CollectionsHome End -->
 
 <!-- review Section Start -->
-<div class="container-fluid banner1 py-5">
-<div class="container my-5 d-flex justif-content-center align-items-center">
-	<div class="row row-cols-1 row-cols-md-3 flex-wrap g-4">
-		<div class="col-12">
-			<h1 class="heading mb-5 text-center">AVIS DES CLIENTS
-			</h1>
-		</div>
-		{% for review in review %}
-			<div class="col-12 col-md-6 col-lg-3">
-				<div class="box text-center text-white">
-					<img src="{{ vich_uploader_asset(review, 'imageFile') }}" width="180px" height="180px">
-					<div class="content">
-						<span class="fs-3">{{ review.fullName }}</span>
-						<p>{{ review.message|slice(0,100) ~ '...'}}</p>
-						<h3>Satisfait</h3>
-						<div class="stars text-danger fs-3">
-							<i class="fas fa-star"></i>
-							<i class="fas fa-star"></i>
-							<i class="fas fa-star"></i>
-							<i class="fas fa-star"></i>
-							<i class="fas fa-star"></i>
-						</div>
-					</div>
-				</div>
-			</div>
-		{% endfor %}
-		
-		<div class="col-12 d-flex justify-content-center align-items-center text-center my-5">
-				<a href="{{ path('review.index.public')}}">VOIR TOUS LES AVIS</a>
-				<a href="{{ path('review.new') }}"> LAISSEZ VOTRE AVIS</a>
-		</div>
-	</div>
-</div>
-</div>
+{% include "components/_reviewsHome.html.twig" %}
 <!-- review Section End -->
 
 <!-- posts Section Start -->
-<div class="container-fluid banner2 py-5">
-<div class="container my-5 d-flex justif-content-center align-items-center">
-	<div class="row row-cols-1 row-cols-md-3 flex-wrap g-4">
-		<div class="col-12">
-			<h1 class="heading mb-5 text-center">NOS ARTICLES
-			</h1>
-		</div>
-		{% for post in posts %}
-			<div class="col-12 col-md-6 col-lg-3 text-secondary py-3">
-				<div class="text-center ">
-					<img src="{{ vich_uploader_asset(post, 'imageFile') }}" width="250px" height="200px">
-					<div class="content">
-						<h2 class="fs-1">{{ post.title }}</h2>
-						<h4 class="fs-2">{{ post.slug }}</h4>
-						<p class="fs-5">{{ post.content|slice(0,100) ~ '...'}}</p>
-					</div>
-				</div>
-			</div>
-		{% endfor %}
-		
-		<div class="col-12 d-flex justify-content-center align-items-center text-center my-5">
-				<a href="{{ path('post.index.public')}}">VOIR TOUS LES ARTICLES</a>
-				<a href="{{ path('post.new') }}"> LAISSEZ VOTRE ARTICLES</a>
-		</div>
-	</div>
-</div>
-</div>
+{% include "components/_postsHome.html.twig" %}
 <!-- posts Section End -->
 
 </body>
